# bevy_template

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.forgejo/workflows/: ci.yml  deploy-itch.yml
.github/workflows/: ci.yml  deploy-itch.yml
.husky/: commit-msg  pre-commit
assets/: config.ron  personna.ron
assets/locales/: en.json  fr.json
assets/textures/: Bottle Glouglou.aseprite
assets/textures/bottle/: bottle_glouglou.aseprite
knowledge/: index.md  log.md
knowledge/menu/: background.md  index.md
knowledge/personna/: debugging.md  index.md
src/: alchemy.rs  environment.rs  interaction.rs  main.rs  physics.rs  views.rs
src/core/: components.rs  mod.rs  ressources.rs  states.rs
src/features/: mod.rs
src/features/hud/: builder.rs  components.rs  mod.rs  placement.rs  resources.rs  systems.rs
src/features/personna/: components.rs  debug.rs  mod.rs  plugin.rs
src/ui/: font.rs  locale.rs  mod.rs
src/ui/menu/: mod.rs
src/ui/menu/screen/: background.rs  mod.rs  pause.rs  playing.rs  splash.rs  start.rs
wasm/: index.html  restart-audio-context.js
