[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
# Game Engine
bevy = { version = "0.18.1", features = ["ui"], default-features = false }

# Input Handling
leafwing-input-manager = "0.20.0"

# Debugging
bevy-inspector-egui = { version = "0.29.0", optional = true }

# Random Number Generator
rand = "0.10.1"

husky-rs = "0.3.3"

# Features
[features]
default = []
2d = ["bevy/2d"]
3d = ["bevy/3d"]
dev = ["dep:bevy-inspector-egui", "bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
